v19.3 - FIX: spacing with align-self between elements within the carousel and correct class names for better understanding of each section code

--- a/style.scss
+++ b/style.scss
@@ -764,12 +764,10 @@
             opacity: 0.6;
             color: #939393;
 
-            // !Cambiar el ajuste para que esté alineado correctamente
-
             &--features{
                 width: 15%;
                 margin-bottom: 15%;
-                justify-content: space-around;
+                justify-content: flex-start;
                 gap: 1em
             }
         }
@@ -788,6 +786,7 @@
             font-weight: 550;
             padding-top: 10px;
             padding-bottom: 5%;
+            align-self: flex-start;
 
         }
 
@@ -796,6 +795,7 @@
             font-size: 14px;
             font-weight: 500;
             color: #3b3d43;
+            align-self: start;
 
         }
 
